--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ regex==2022.10.31
 sniffio==1.3.0
 SQLAlchemy==1.4.45
 starlette==0.23.1
+streamlit==1.23.1
 tabulate==0.9.0
 tokenizers==0.13.2
 toposort==1.7
